<resources>
    <string name="app_name">Jantech</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Logout</string>
    <string name="cart">Payments</string>
    <string name="profile">Profile</string>
    <string name="login">login</string>
    <string name="sendto">Send to Payments</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookings">Payments</string>
    <string name="evnts">Events</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jantech services</string>
    <string name="nav_header_subtitle">Jantech@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_staff_dashboard">StaffDashboard</string>
    <string name="title_activity_dashboard_staff">DashboardStaff</string>
    <string name="title_activity_emp_dashboard">EmpDashboard</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="title_activity_profile_dash_board">ProfileDashBoard</string>

    <string name="about">
Kisa Logistics, is a 10 year old local supplier of Heavy lifting equipment,Aerial platforms(man lift)
        and transportation of cargo using our self-loader trucks to various destinations in Kenya.Most of our customers have been
        with us for more than 5 years and we take pride in the fact that our customers keep coming back.
        \n

    </string>
    <string name="help">

        <b>How to login</b>
        \n
        1. click on login
        \n
        2. Enter your username and password
        \n
        3. Click on the login button to login.
        \n
        \n
        <b>Ho to register</b>
        \n
        1. Click on register link
        \n
        2. on the next interface enter the required details
        \n
        3. click on the register button to register
        \n
        \n
        <b>How to Hire</b>
        \n
        1. Login to your account
        \n
        2. select a machinery to hire
        \n
        3. Enter the number of machinery to hire and days
        \n
        4. click on send to Bookings
    </string>

</resources>